2001-03-09  Lauris Kaplinski  <lauris@ximian.com>

	* configure.in: Version 0.22

2001-03-09  Frank Felfe  <innerspace@iname.com>

	* src/desktop.c (sp_desktop_update_scrollbars): Cleanup

	* src/event-context.c (sp_event_context_private_root_handler): Use
	Gdk keysyms instead of numeric values. Add moving/panning keybindings,
	space for root menu popup
	(sp_event_root_menu_popup): Pop menu on space

	* select-context.c (sp_select_context_root_handler): Use Gdk keysyms
	instead of numeric values

	* selection-chemistry.c (sp_selection_move_screen): New function
	(sp_selection_item_next): New function
	
	* doc/keybingings.txt: New keybingings

2001-03-09  Lauris Kaplinski  <lauris@ximian.com>

	* src/nodepath.c (node_event): Update repr after deletion

	* src/file.c (file_open_ok): Destroy widget instead of hiding
	(file_open_cancel): New function
	(sp_file_open): Connect new cancel handler
	(file_save_ok): Exit from private main loop
	(file_save_cancel): New function
	(sp_file_save_as): Connect new cancel handler, enter private loop
	(file_import_cancel): New function
	(sp_file_import): Connect new cancel handler
	(file_export_cancel): New function
	(sp_file_export): Connect new cancel handler

2001-03-08  Lauris Kaplinski  <lauris@ximian.com>

	* src/interface.c (sp_ui_delete): New function presenting close
	dialog box if needed
	(sp_ui_close_view): Use sp_ui_delete ()
	(sp_create_window): Connect "delete_event" and set window title

	* src/file.c (sp_file_save_document): New function

	* src/document-undo.c (sp_document_done):  Set "modified" attribute

	* src/file.c (file_save_ok): Clear "modified" attribute

2001-03-07  Lauris Kaplinski  <lauris@ximian.com>

	* doc/keybindings.txt: Register node editing keystrokes

	* src/desktop.c (sp_desktop_new): Do not grab focus here

	* src/helper/sodipodi-ctrl.c: Added shape argument type
	(sp_ctrl_class_init): Ditto
	(sp_ctrl_init): Ditto
	(sp_ctrl_set_arg): Ditto