@@ -1,6 +1,168 @@
 
 gladedir = $(datadir)/sodipodi
 
+pixmaps = \
+	add.xpm \
+	al_bottom_in.xpm \
+	al_bottom_out.xpm \
+	al_center_hor.xpm \
+	al_center_ver.xpm \
+	al_left_in.xpm \
+	al_left_out.xpm \
+	al_right_in.xpm \
+	al_right_out.xpm \
+	al_top_in.xpm \
+	al_top_out.xpm \
+	align_bc.xpm \
+	align_bl.xpm \
+	align_br.xpm \
+	align_cc.xpm \
+	align_cl.xpm \
+	align_cr.xpm \
+	align_tc.xpm \
+	align_tl.xpm \
+	align_tr.xpm \
+	angle_180.xpm \
+	angle_270.xpm \
+	angle_90.xpm \
+	angle_any.xpm \
+	arrows_hor.xpm \
+	arrows_ver.xpm \
+	back.xpm \
+	cap_butt.xpm \
+	cap_round.xpm \
+	cap_square.xpm \
+	clear.xpm \
+	create_new.xpm \
+	curve.xpm \
+	cusp.xpm \
+	del.xpm \
+	delete.xpm \
+	dimension_hor.xpm \
+	dimension_ver.xpm \
+	div.xpm \
+	draw_ellipse.xpm \
+	draw_freehand.xpm \
+	draw_node.xpm \
+	draw_rect.xpm \
+	draw_select.xpm \
+	draw_text.xpm \
+	draw_zoom.xpm \
+	dt_active.xpm \
+	dt_inactive.xpm \
+	duplicate.xpm \
+	edge_down.xpm \
+	edge_up.xpm \
+	edit_copy.xpm \
+	edit_cut.xpm \
+	edit_delete.xpm \
+	edit_duplicate.xpm \
+	edit_paste.xpm \
+	edit_redo.xpm \
+	edit_undo.xpm \
+	ellipse.xpm \
+	file_export.xpm \
+	file_import.xpm \
+	file_new.xpm \
+	file_open.xpm \
+	file_print.xpm \
+	file_print_preview.xpm \
+	file_save.xpm \
+	file_save_as.xpm \
+	fill.xpm \
+	fill_fractal.xpm \
+	fill_gradient.xpm \
+	fill_none.xpm \
+	fill_pattern.xpm \
+	fill_solid.xpm \
+	flip_hor.xpm \
+	flip_ver.xpm \
+	font.xpm \
+	forward.xpm \
+	freehand.xpm \
+	join.xpm \
+	join_bevel.xpm \
+	join_miter.xpm \
+	join_round.xpm \
+	line.xpm \
+	line_dashed.xpm \
+	line_doubled.xpm \
+	line_full.xpm \
+	lock_aspect_no.xpm \
+	lock_aspect_yes.xpm \
+	move.xpm \
+	node.xpm \
+	node_break.xpm \
+	node_curve.xpm \
+	node_cusp.xpm \
+	node_delete.xpm \
+	node_insert.xpm \
+	node_join.xpm \
+	node_line.xpm \
+	node_smooth.xpm \
+	node_symetric.xpm \
+	object_align.xpm \
+	object_fill.xpm \
+	object_flip_hor.xpm \
+	object_flip_ver.xpm \
+	object_font.xpm \
+	object_layout.xpm \
+	object_reset.xpm \
+	object_rotate.xpm \
+	object_stroke.xpm \
+	object_tocurve.xpm \
+	object_trans.xpm \
+	origin.xpm \
+	properties_fill.xpm \
+	properties_layout.xpm \
+	properties_stroke.xpm \
+	quit_nope.xpm \
+	quit_yep.xpm \
+	rect.xpm \
+	reread.xpm \
+	rotate.xpm \
+	rotate_left.xpm \
+	rotate_right.xpm \
+	scale.xpm \
+	scale_hor.xpm \
+	scale_ver.xpm \
+	select.xpm \
+	selection_bot.xpm \
+	selection_break.xpm \
+	selection_combine.xpm \
+	selection_down.xpm \
+	selection_group.xpm \
+	selection_top.xpm \
+	selection_ungroup.xpm \
+	selection_up.xpm \
+	seperate_tool.xpm \
+	skew.xpm \
+	skew_hor.xpm \
+	skew_ver.xpm \
+	smooth.xpm \
+	stroke.xpm \
+	sym.xpm \
+	text.xpm \
+	toback.xpm \
+	tofront.xpm \
+	toolbox_draw.xpm \
+	toolbox_edit.xpm \
+	toolbox_file.xpm \
+	toolbox_node.xpm \
+	toolbox_object.xpm \
+	toolbox_select.xpm \
+	toolbox_zoom.xpm \
+	unknown.xpm \
+	zoom.xpm \
+	zoom_1_to_1.xpm \
+	zoom_1_to_2.xpm \
+	zoom_2_to_1.xpm \
+	zoom_draw.xpm \
+	zoom_in.xpm \
+	zoom_out.xpm \
+	zoom_page.xpm \
+	zoom_select.xpm
+
 glade_DATA = 					\
 	align.glade align.c			\
 	desktop.glade desktop.c			\
@@ -10,10 +172,11 @@ glade_DATA = 					\
 	text-dialog.glade text-dialog.c		\
 	toolbox.glade toolbox.c			\
 	transformation.glade transformation.c	\
-	xml-tree.glade xml-tree.c
+	xml-tree.glade xml-tree.c \
+	$(pixmaps)
 
 EXTRA_DIST = $(glade_DATA)
 
-dist-hook:
-	cp $(srcdir)/*xpm $(distdir)
+#dist-hook:
+#	cp $(srcdir)/*xpm $(distdir)
 
